[#86DevUIAlignment][Marcus] fixed: dropdown group margin missing

--- a/src/Component/CinemaSessionPickerPage/CinemaSessionPickerPage.css
+++ b/src/Component/CinemaSessionPickerPage/CinemaSessionPickerPage.css
@@ -7,8 +7,7 @@
 }
 
 .session-picker-sessions-dropdown-list {
-  border-radius: 5px;
-  margin: 5% 0;
+  margin: 5% 0 !important;
 }
 
 .session-picker-sessions-dropdown {
